# craft-simulator

./: Cargo.toml  Dockerfile
k8s/: evaluator.yaml  generator.yaml  learner.yaml
pysrc/: credentials.py  evaluator.py  generator.py  learner.py  learner2.py  main.py  misc.py  simulator.py  tools.py  train.py
src/: benchmark.rs  cache.rs  cui.rs  encoding.rs  executor.rs  formatter.rs  gcs.rs  learner.rs  logic.rs  main.rs  mcts.rs  network.rs  network2.rs  predictor.rs  replay.rs  selector.rs  selfplay.rs  setting.rs  writer.rs
