[package]
name = "craft-simulator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
xorshift = "0.1"
indicatif = "0.16.2"
serde = { version = "^1.0.101", features = ["derive"] }
serde_json = "^1.0.41"
num = "0.4.0"
ndarray = "0.15.3"
tensorflow = {version="0.17.0", features = ["ndarray"] }
rand = "0.6.5"
mysql = "21.0.2"
ulid = "0.5.0"
bzip2 = "0.4.3"
futures = "0.3"
pprof = { version = "0.4", features = ["flamegraph"] }
